<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.75"
        android:orientation="vertical">

        <TextView
            android:id="@+id/calc_display"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:paddingStart="20dp"
            android:text="@string/display"
            android:textColor="@color/white"
            android:textSize="50sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_answer"
            style="@style/Button1"
            android:onClick="onAnswer"
            android:text="@string/ans"/>
        <Button
            android:id="@+id/btn_power"
            style="@style/Button1"
            android:onClick="onOperator"
            android:text="@string/power"/>
        <Button
            android:id="@+id/btn_sqrt"
            style="@style/Button1"
            android:onClick="onOperator"
            android:text="@string/sqrt"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_7"
            style="@style/Button2"
            android:onClick="onPress"
            android:text="@string/_7"/>
        <Button
            android:id="@+id/btn_8"
            style="@style/Button2"
            android:onClick="onPress"
            android:text="@string/_8"/>
        <Button
            android:id="@+id/btn_9"
            style="@style/Button2"
            android:onClick="onPress"
            android:text="@string/_9"/>

        <Button
            android:id="@+id/btn_multiply"
            style="@style/Button1"
            android:onClick="onOperator"
            android:text="@string/multiply"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_4"
            style="@style/Button2"
            android:onClick="onPress"
            android:text="@string/_4"/>
        <Button
            android:id="@+id/btn_5"
            style="@style/Button2"
            android:onClick="onPress"
            android:text="@string/_5"/>
        <Button
            android:id="@+id/btn_6"
            style="@style/Button2"
            android:onClick="onPress"
            android:text="@string/_6"/>

        <Button
            android:id="@+id/btn_divide"
            style="@style/Button1"
            android:onClick="onOperator"
            android:text="@string/divide"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_1"
            style="@style/Button2"
            android:onClick="onPress"
            android:text="@string/_1"/>
        <Button
            android:id="@+id/btn_2"
            style="@style/Button2"
            android:onClick="onPress"
            android:text="@string/_2"/>
        <Button
            android:id="@+id/btn_3"
            style="@style/Button2"
            android:onClick="onPress"
            android:text="@string/_3"/>

        <Button
            android:id="@+id/btn_plus"
            style="@style/Button1"
            android:onClick="onOperator"
            android:text="@string/plus"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_clear"
            style="@style/Button1"
            android:onClick="onClear"
            android:text="@string/clear"/>
        <Button
            android:id="@+id/btn_0"
            style="@style/Button2"
            android:onClick="onPress"
            android:text="@string/_0"/>
        <Button
            android:id="@+id/btn_equal"
            style="@style/Button1"
            android:onClick="onEqual"
            android:text="@string/equal"/>

        <Button
            android:id="@+id/btn_minus"
            style="@style/Button1"
            android:onClick="onOperator"
            android:text="@string/minus"/>

    </LinearLayout>

</LinearLayout>